--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,6 @@
     <string name="goals_tab_image">Goals tab image</string>
     <string name="empty_mood_tab">Add new mood to your journal</string>
     <string name="empty_goal_tab">Add new goal to your journal</string>
+    <string name="summary">Summary of the day</string>
+    <string name="go_back">Go back arrow</string>
 </resources>
