--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="empty_goal_tab">Add new goal to your journal</string>
     <string name="summary">Summary of the day</string>
     <string name="go_back">Go back arrow</string>
+    <string name="water_data">Water data</string>
 </resources>
