--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,9 +69,12 @@
     <string name="account">Your account</string>
     <string name="signUp_button">Sign up</string>
     <string name="signOut">Sign out</string>
-    <string name="start_of_the_sleep">Start of your sleep</string>
-    <string name="sleep_start_button">Start of the sleep</string>
+    <string name="start_of_the_sleep">Start of the sleep:</string>
     <string name="sleep_end_button">End of the sleep</string>
     <string name="add_your_food">Add your food</string>
     <string name="your_water_goal">Your water goal</string>
+    <string name="note">Note:</string>
+    <string name="duration_of_the_sleep">Duration of the sleep:</string>
+    <string name="end_of_the_sleep">End of the sleep:</string>
+    <string name="rating">Rating</string>
 </resources>
