--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="duration_of_the_sleep">Duration of the sleep:</string>
     <string name="end_of_the_sleep">End of the sleep:</string>
     <string name="rating">Rating</string>
+    <string name="kcal">kcal: </string>
 </resources>
