--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,8 @@
     <string name="click_to_confirm">Click to confirm</string>
     <string name="confirmation_text">Are you sure you want to delete %s?</string>
     <string name="confirm_button">Confirm</string>
-    <string name="rate_your_sleep">Rate your sleep</string>
-    <string name="how_do_you_feel">How do you feel?</string>
+    <string name="rate_your_sleep">Rate your sleep:</string>
+    <string name="how_do_you_feel">Note:</string>
     <string name="save_button">Save</string>
     <string name="select_date">Select date</string>
     <string name="select_time">Select time</string>
@@ -78,9 +78,13 @@
     <string name="rating">Rating</string>
     <string name="kcal">kcal: </string>
     <string name="amount">amount: </string>
-    <string name="total_calories">"Total calories"</string>
-    <string name="water_intake">Water intake</string>
-    <string name="hours_of_sleep">Sleep duration</string>
+    <string name="total_calories">"Total calories:"</string>
+    <string name="water_intake">Water intake:</string>
+    <string name="hours_of_sleep">Sleep duration:</string>
     <string name="set_user_name">Set username</string>
-    <string name="user_name">Username</string>
+    <string name="user_name">Username:</string>
+    <string name="your_email">Email address:</string>
+    <string name="user_identifier">User identifier:</string>
+    <string name="steps_goal">Steps goal for today</string>
+    <string name="number_of_steps">Number of steps</string>
 </resources>
