--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,10 @@
     <string name="add_button">+ Add</string>
     <string name="new_goal_button">New goal</string>
     <string name="sign_in_button">Sign in</string>
-    <string name="daily_steps_text">Set up your daily steps goal!</string>
-    <string name="nutrition_text1">Add your daily hydration goal!</string>
-    <string name="nutrition_text2">Add your food</string>
-    <string name="sleep_text">Add your sleep record</string>
+    <string name="daily_steps_text">No steps data</string>
+    <string name="nutrition_text1">No water data</string>
+    <string name="nutrition_text2">No food data</string>
+    <string name="sleep_text">No sleep data</string>
     <string name="cancel_button">Cancel</string>
     <string name="click_to_confirm">Click to confirm</string>
     <string name="confirmation_text">Are you sure you want to delete %s?</string>
@@ -59,8 +59,8 @@
     <string name="drawer_image">Drawer image</string>
     <string name="mood_chart">Mood chart</string>
     <string name="goals_tab_image">Goals tab image</string>
-    <string name="empty_mood_tab">Add new mood to your journal</string>
-    <string name="empty_goal_tab">Add new goal to your journal</string>
+    <string name="empty_mood_tab">No mood data</string>
+    <string name="empty_goal_tab">No goals data</string>
     <string name="summary">Summary of the day</string>
     <string name="go_back">Go back arrow</string>
     <string name="water_data">Water data</string>
@@ -91,7 +91,7 @@
     <string name="export_data">Do you want to export your data to txt file?</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="reset_your_password_text">Send password reset email</string>
-    <string name="email">Email</string>
+    <string name="email">Email Address</string>
     <string name="warning">Clear all data?</string>
     <string name="warning2">You can\'t undo this. Your data will be permanently deleted after clicking confirm</string>
     <string name="data_removed">Data removed</string>
@@ -100,4 +100,11 @@
     <string name="create_account">Create account</string>
     <string name="app_icon">App icon</string>
     <string name="user_name_optional">Username (optional)</string>
+    <string name="empty_string" />
+    <string name="why_to_track">Why you should track your lifestyle?</string>
+    <string name="export_data_drawer">Export data to txt file</string>
+    <string name="choose_theme_drawer">Choose theme</string>
+    <string name="clear_data">Clear all data</string>
+    <string name="information">Why to track lifestyle?</string>
+    <string name="confirm_password">Confirm Password</string>
 </resources>
