--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,9 @@
     <string name="clear_data">Clear all data</string>
     <string name="information">Why to track lifestyle?</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="verification_needed_title">Verification needed</string>
+    <string name="verification_needed_1">We\'re sorry, but it looks like your account is not yet verified. To access all of our services, you\'ll need to verify your account. You can get a verification link sent to your email again.</string>
+    <string name="resend_email">Resend email</string>
+    <string name="try_again">Try again</string>
+    <string name="verification_needed_2">To fully activate your account, please verify your email address by following the instructions in the verification email that we sent to your registered email address.</string>
 </resources>
