--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
     <string name="app_name">MyVitaLife</string>
     <string name="nav_drawer_menu">burger_icon</string>
-    <string name="steps">Steps</string>
+    <string name="quotes">Quotes</string>
     <string name="nutrition">Nutrition</string>
     <string name="journal">Journal</string>
     <string name="insights">Insights</string>
     <string name="sleep">Sleep</string>
-    <string name="daily_steps_image">Daily Steps (image)</string>
     <string name="hydration_image">Hydration screen (image)</string>
     <string name="eating_image">Eating screen (image)</string>
     <string name="provide_name_image">Provide Name (image)</string>
@@ -14,7 +13,6 @@
     <string name="add_button">+ Add</string>
     <string name="new_goal_button">New goal</string>
     <string name="sign_in_button">Sign in</string>
-    <string name="daily_steps_text">No steps data</string>
     <string name="nutrition_text1">No water data</string>
     <string name="nutrition_text2">No food data</string>
     <string name="sleep_text">No sleep data</string>
@@ -49,8 +47,6 @@
     <string name="pick_a_date">Pick a date to inspect your records</string>
     <string name="amount_of_water">Water intake goal (in ml)</string>
     <string name="cup_size">Cup size (in ml)</string>
-    <string name="add_steps_image">Add steps image</string>
-    <string name="daily_goal_steps">What is your daily steps goal?</string>
     <string name="password">Password</string>
     <string name="name_of_food">Name of the product</string>
     <string name="number_of_calories">Number of calories</string>
@@ -85,8 +81,6 @@
     <string name="user_name">Username:</string>
     <string name="your_email">Email address:</string>
     <string name="user_identifier">User identifier:</string>
-    <string name="steps_goal">Steps goal for today</string>
-    <string name="number_of_steps">Number of steps</string>
     <string name="data_exported">Data exported to downloads folder</string>
     <string name="export_data">Do you want to export your data to txt file?</string>
     <string name="forgot_password">Forgot password?</string>
@@ -112,4 +106,5 @@
     <string name="resend_email">Resend email</string>
     <string name="try_again">Try again</string>
     <string name="verification_needed_2">To fully activate your account, please verify your email address by following the instructions in the verification email that we sent to your registered email address.</string>
+    <string name="no_quotes">No quotes</string>
 </resources>
