--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,6 @@
     <string name="confirmation_text">Are you sure you want to delete %s?</string>
     <string name="confirm_button">Confirm</string>
     <string name="rate_your_sleep">Rate your sleep:</string>
-    <string name="how_do_you_feel">Note:</string>
     <string name="save_button">Save</string>
     <string name="select_date">Select date</string>
     <string name="select_time">Select time</string>
@@ -68,13 +67,13 @@
     <string name="sleep_end_button">End of the sleep</string>
     <string name="add_your_food">Add your food</string>
     <string name="your_water_goal">Your water goal</string>
-    <string name="note">Note:</string>
+    <string name="note">Note (optional):</string>
     <string name="duration_of_the_sleep">Duration of the sleep:</string>
     <string name="end_of_the_sleep">End of the sleep:</string>
     <string name="rating">Rating</string>
     <string name="kcal">kcal: </string>
     <string name="amount">amount: </string>
-    <string name="total_calories">"Total calories:"</string>
+    <string name="total_calories">"Total calories: "</string>
     <string name="water_intake">Water intake:</string>
     <string name="hours_of_sleep">Sleep duration:</string>
     <string name="set_user_name">Set username</string>
@@ -107,4 +106,7 @@
     <string name="try_again">Try again</string>
     <string name="verification_needed_2">To fully activate your account, please verify your email address by following the instructions in the verification email that we sent to your registered email address.</string>
     <string name="no_quotes">No quotes</string>
+    <string name="completed_text">Daily water intake completed:</string>
+    <string name="great_job">Great job!</string>
+    <string name="save">Save</string>
 </resources>
