Adding confirmation dialog in fav quotes, Adding comments, majoriy of strings replaced with stringRecource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="sleep_text">No sleep data</string>
     <string name="cancel_button">Cancel</string>
     <string name="click_to_confirm">Click to confirm</string>
-    <string name="confirmation_text">Are you sure you want to delete %s entry?</string>
+    <string name="confirmation_text">Are you sure you want to delete "%s" entry?</string>
     <string name="confirm_button">Confirm</string>
     <string name="confirm_delete">CONFIRM</string>
     <string name="rate_your_sleep">Rate your sleep:</string>
@@ -82,7 +82,7 @@
     <string name="your_email">Email address:</string>
     <string name="user_identifier">User identifier:</string>
     <string name="data_exported">Data exported to downloads folder</string>
-    <string name="export_data">Do you want to export your data to txt file?</string>
+    <string name="export_data">Do you want to export your data to txt file from %s?</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="reset_your_password_text">Send password reset email</string>
     <string name="email">Email Address</string>
@@ -120,4 +120,47 @@
     <string name="note_text">Note:</string>
     <string name="achieved">Achieved</string>
     <string name="notification_permission">Notifications permission</string>
+    <string name="signedOut">Signed out</string>
+    <string name="clock">Clock</string>
+    <string name="hide_password">Hide password</string>
+    <string name="show_password">Show password</string>
+    <string name="permission_already_granted">Permission already granted</string>
+    <string name="confirm_capital">CONFIRM</string>
+    <string name="light">Light</string>
+    <string name="dark">Dark</string>
+    <string name="left_arrow">Left Arrow</string>
+    <string name="right_arrow">Right arrow</string>
+    <string name="morning">morning</string>
+    <string name="afternoon">afternoon</string>
+    <string name="evening">evening</string>
+    <string name="night">night</string>
+    <string name="greeting">Good %s %s!</string>
+    <string name="add">Add</string>
+    <string name="modify">Modify</string>
+    <string name="mood">Mood</string>
+    <string name="goals">Goals</string>
+    <string name="amazing_lower_case">amazing</string>
+    <string name="good_lower_case">good</string>
+    <string name="neutral_lower_case">neutral</string>
+    <string name="bad_lower_case">bad</string>
+    <string name="awful_lower_case">awful</string>
+    <string name="i_felt">I felt %s</string>
+    <string name="delete_button">Delete</string>
+    <string name="hydration">Hydration</string>
+    <string name="eating">Eating</string>
+    <string name="remove_icon">Remove Icon</string>
+    <string name="delete_icon">Delete Icon</string>
+    <string name="empty_hydration_tab">Empty hydration tab</string>
+    <string name="empty_eating_tab">Empty eating tab</string>
+    <string name="completed_hydration">Completed hydration Icon</string>
+    <string name="quote_of_the_day">Quote of the day</string>
+    <string name="favourite_quotes">Favourite quotes</string>
+    <string name="favourite_icon">Favourite Icon</string>
+    <string name="quote_of">Quote of %s</string>
+    <string name="empty_quotes_icon">Empty quotes Icon</string>
+    <string name="empty_with_brackets">(empty)</string>
+    <string name="empty_sleep_screen_icon">Empty sleep screen Icon</string>
+    <string name="notification_title">Time to add new entry!</string>
+    <string name="notification_message">Add new data to your app and check out today\'s quote!</string>
+    <string name="remove_quote_text">Confirm if you want to remove this quote from your list</string>
 </resources>
