--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,4 +176,5 @@
     <string name="average_sleep_rate">Average sleep score:</string>
     <string name="total_generated_quotes">Total generated quotes</string>
     <string name="total_favourite_quotes">Total favourite quotes</string>
+    <string name="created_at">Account created on:</string>
 </resources>
